Create custom layout and override onTouchEvent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">android-sample-touch-mechanism</string>
+    <string name="button">View</string>
+    <string name="text">Layout</string>
 </resources>
